2008-06-10  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-main.c: (pre_parse_hook):
	Call setlocale on init

	* clutter/x11/clutter-event-x11.c: (translate_key_event):
	Fix typo and use the same buffer size as xev

2008-06-10  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-texture.c: improved documentation for
	clutter_texture_set_filter_quality.

2008-06-10  Chris Lord  <chris@openedhand.com>

	Bug #916 - ClutterKeyEvent:unicode_value is ignored
	Bug #950 - AltGr not handled

	* clutter/osx/clutter-event-osx.c: (clutter_event_osx_translate):
	* clutter/x11/clutter-event-x11.c: (translate_key_event):
	* tests/test-events.c: (fill_keybuf), (input_cb):
	Apply patch from Tommi Komulainen, fill the unicode_value attribute of
	the ClutterKeyEvent struct. Also use XKeycodeToKeysym, as suggested in
	bug #950, comment #2

2008-06-10  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c:
	Minor reformatting cleanups. Emit filter-quality prop on change.
	* clutter/glx/clutter-glx-texture-pixmap.c:
	Support mipmaps via filter quality prop.

2008-06-10  Chris Lord  <chris@openedhand.com>

	* tests/Makefile.am:
	* tests/test-entry-auto.c:
	Add automatic test for ClutterEntry, by Tommi Komulainen

2008-06-10  Chris Lord  <chris@openedhand.com>

	* clutter/cogl/common/cogl-primitives.c: (_cogl_path_arc):
	Draw as expected when end angle is lower than start angle (i.e. do not
	swap the angles). This aligns with cairo behaviour.

2008-06-10  Tommi Komulainen  <tommi.komulainen@iki.fi>

	Bug#959 - Multiple minor improvements

	* configure.ac: pick up GDKPIXBUF_PREFIX from gdk-pixbuf-2.0
	module, not pango

	* clutter/clutter-keysyms-table.h: cosmetic fix for ifdef guard
	name in the comment (leftover from earlier commit)

	* tests/test-textures.c: don't depend on GdkPixbuf as we're not
	using any actual features from it, just plain pixel buffer
	manipulation

	* clutter/clutter-timeline.c